syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

import "Protos/shared_definitions.proto";
import "Protos/common.proto";

option csharp_namespace = "Shared.Proto.Device";

service DeviceGrpc {
  rpc GetAllDevices (common.GenericGetManyRequest) returns (GetAllDevicesResponse);
  rpc GetDevice (common.GenericGetRequest) returns (DeviceExtendedDto);
  rpc GetDeviceByName (GetDeviceByNameRequest) returns (DeviceExtendedDto);

  rpc CreateDevice (CreateDeviceRequest) returns (DeviceExtendedDto);
  rpc UpdateDevice (UpdateDeviceRequest) returns (DeviceDto);
  rpc DeleteDevice (common.GenericDeleteRequest) returns (DeleteDeviceResponse);

  rpc Ping (PingRequest) returns (google.protobuf.Empty);
  rpc GenerateToken (GenerateTokenRequest) returns (GenerateTokenResponse);
}

message GetAllDevicesResponse {
  repeated DeviceExtendedDto Devices = 1;
  common.PaginationMetaData MetaData = 2;
}

message CreateDeviceRequest {
  string Name = 1;
  google.protobuf.StringValue DisplayName = 2;
  bool Online = 3;
  google.protobuf.StringValue MacAddress = 4;
  google.protobuf.StringValue Model = 5;
  google.protobuf.StringValue Manufacturer = 6;
  google.protobuf.Int32Value LocationId = 7;
  string UserId = 8;

  // Sensors mounted on the device to be added
  repeated CreateDeviceSensorResource Sensors = 16;
}

message UpdateDeviceRequest {
  int32 Id = 1;

  // fields to update
  google.protobuf.StringValue DisplayName = 3;
  bool Online = 4;
  google.protobuf.StringValue Model = 5;
  google.protobuf.StringValue Manufacturer = 6;
  google.protobuf.Int32Value LocationId = 7;
  google.protobuf.StringValue MacAddress = 8;

  // allow only owner of the device to delete it
  string UserId = 16;
}

message PingRequest {
  int32 Id = 1;
}

message GenerateTokenRequest {
  oneof Identifier {
    int32 Id = 1;
    string Name = 2;
  }

  // allow only owner of the device to generate the token
  string UserId = 3;
}

message GenerateTokenResponse {
  int32 Id = 1;
  string Token = 2;
}

message DeleteDeviceResponse {
  int32 DeletedDeviceId = 1;
  repeated int32 DeletedSensorIds = 2;
}

message GetDeviceByNameRequest {
  string DeviceName = 1;
  common.GetRequestParameters Parameters = 2;
}

